trunk/OldArchive/4be44cdc41199c1f18f4fff6a4b33fcd-f0bd80647c520ac4f6fb0347af37c64b/output
main.cpp:9:9: error: no type named 'f' in namespace 'my'
    my::f(my::foo());
    ~~~~^
main.cpp:9:15: error: definition or redeclaration of 'foo' not allowed inside a function
    my::f(my::foo());
          ~~~~^
2 errors generated.
